--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 body {
+  background-color: rgb(233, 233, 233);
+}
+.container {
   background-color: aliceblue;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 30px 50px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
