--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,14 @@
 body {
   background-color: rgb(233, 233, 233);
+
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
 }
 .container {
   background-color: aliceblue;
   max-width: 600px;
-  margin: 0 auto;
-  padding: 30px 50px;
+  margin: 20px auto;
+  padding: 30px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 20px;
 }
