--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,23 @@
 body {
-  background-color: rgb(233, 233, 233);
-
+  background-color: rgb(248, 248, 248);
   font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
 }
 .container {
   background-color: aliceblue;
   max-width: 600px;
-  margin: 20px auto;
+  margin: 45px auto;
   padding: 30px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 20px;
+}
+.search-input {
+  background-color: rgb(219, 219, 219);
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-button {
+  padding: 15px 20px;
 }
