--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,16 @@ body {
   background-color: rgb(248, 248, 248);
   font-family: "Josefin Sans", sans-serif;
 }
+a {
+  color: #ff0055;
+}
+p strong {
+  color: blueviolet;
+}
+main {
+  font-weight: 200;
+  font-size: 20px;
+}
 .container {
   background-color: aliceblue;
   max-width: 600px;
@@ -16,8 +26,19 @@ body {
   border-radius: 6px;
   font-size: 16px;
   padding: 15px 20px;
+  width: 80%;
 }
 
 .search-button {
   padding: 15px 20px;
+  border: 1px solid black;
+  background-color: #ff0055;
+  color: white;
+  border-radius: 6px;
+}
+.search-button:hover {
+  color: #ff0055;
+  background-color: white;
+  cursor: pointer;
+  border: 1px solid black;
 }
