Set up Weather Status
Added the class weather status and then followed by adding CSS properties.

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,8 @@ main {
   cursor: pointer;
   border: 1px solid black;
 }
+.weather-status {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 20px;
+}
