--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ main {
 }
 .current-temperature-value {
   font-size: 80px;
-  font-weight: bold;
+  font-weight: 450;
   position: relative;
   top: 10px;
 }
